remove API_KEY and organization model
