# middlewares/validate-user-update.js
@@ -1,27 +1,26 @@
 // middlewares/validateUserUpdate.js
-const Joi = require('joi')
-const { userJoiSchema } = require('../models/user-model')
+const Joi = require("joi");
+const { userJoiSchema } = require("../models/user-model");
 
 const userUpdateJoiSchema = Joi.object({
-  username: userJoiSchema.extract('username').optional(),
-  email: userJoiSchema.extract('email').optional(),
+  username: userJoiSchema.extract("username").optional(),
+  email: userJoiSchema.extract("email").optional(),
   // password: userJoiSchema.extract('password').optional(),
-  phone: userJoiSchema.extract('phone').optional(),
+  phone: userJoiSchema.extract("phone").optional(),
   // firstName: userJoiSchema.extract('firstName').optional(),
   // lastName: userJoiSchema.extract('lastName').optional(),
-  role: userJoiSchema.extract('role').optional(),
-  isActive: userJoiSchema.extract('isActive').optional(),
-  organization: userJoiSchema.extract('organization').optional(),
-})
+  role: userJoiSchema.extract("role").optional(),
+  isActive: userJoiSchema.extract("isActive").optional(),
+});
 
 const validateUserUpdate = (req, res, next) => {
-  const { error } = userUpdateJoiSchema.validate(req.body)
+  const { error } = userUpdateJoiSchema.validate(req.body);
   if (error) {
-    const err = new Error(error.details[0].message)
-    err.statusCode = 400
-    return next(err)
+    const err = new Error(error.details[0].message);
+    err.statusCode = 400;
+    return next(err);
   }
-  next()
-}
+  next();
+};
 
-module.exports = validateUserUpdate
+module.exports = validateUserUpdate;
